--- a/styles/style.css
+++ b/styles/style.css
@@ -49,3 +49,7 @@ ol {
 .custom-scrollbar::-webkit-scrollbar-thumb {
   background-color: #D9D9D9;
 }
+
+.custom-scrollbar::-webkit-scrollbar {
+  width: 4px;
+}
