--- a/styles/style.css
+++ b/styles/style.css
@@ -13,7 +13,7 @@ html {
   block-size: 100%;
   margin: auto;
   color: #fff;
-  font-family: 'Fira Sans Condensed', sans-serif;
+  font-family: "Fira Sans Condensed", sans-serif;
   font-size: 18px;
   background-color: #1b1919;
 }
@@ -47,9 +47,63 @@ ol {
 }
 
 .custom-scrollbar::-webkit-scrollbar-thumb {
-  background-color: #D9D9D9;
+  background-color: #d9d9d9;
 }
 
-.custom-scrollbar::-webkit-scrollbar {
-  width: 4px;
+.page {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.content {
+  width: 1140px;
+  display: flex;
+  align-items: flex-end;
+  gap: 30px;
+}
+
+.result {
+  width: 711px;
+  height: 534px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+
+.result__video {
+  object-fit: contain;
+}
+
+.result__video-container {
+  width: 711px;
+  height: 386px;
+  margin-bottom: 16px;
+}
+
+.content__details {
+  display: flex;
+  height: 534px;
+  flex-grow: 1;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.content__video-card-thumbnail {
+  width: 399px;
+}
+
+.search-form {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+
+.content__list-container {
+  height: 298px;
+  overflow-y: scroll;
+}
+
+.title {
+  margin-bottom: 26px;
 }
