--- a/styles/style.css
+++ b/styles/style.css
@@ -90,8 +90,21 @@ ol {
   justify-content: space-between;
 }
 
+.content__video-card {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+}
+
 .content__video-card-thumbnail {
-  width: 399px;
+  min-width: 194px;
+  height: 103px;
+  object-fit: contain;
+  object-position: top; /* тут сомнения */
+}
+
+.content__video-card-description-container {
+  flex-grow: 1;
 }
 
 .search-form {
@@ -116,4 +129,121 @@ ol {
 
 .title {
   margin-bottom: 26px;
+  font-family: Oswald; /*дописать еще*/
+  font-weight: 700;
+  font-size: 75px;
+  text-transform: uppercase;
+  line-height: 94%;
+}
+
+.content__accent {
+  color: #545050;
+}
+
+.search-form__fieldset-title {
+  font-family: "Fira Sans Condensed";
+  font-weight: 400;
+  font-size: 18px;
+}
+
+.content__card-link {
+  text-decoration: none;
+  color: #fff;
+}
+
+.content__video-card-title {
+  /*возможность переполнения, заменяя излишний текст*/
+  font-family: Oswald;
+  font-weight: 700;
+  font-size: 30px;
+  text-transform: uppercase;
+}
+
+.content__video-card-description {
+  font-family: "Fira Sans Condensed";
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 16.2px;
+
+  /* возможность переполнения, заменяя излишний текст, line-clamp, Обращайте особое внимание на интерлиньяж.*/
+}
+
+.visually-hidden {
+  position: absolute;
+  inline-size: 1px;
+  block-size: 1px;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  white-space: nowrap;
+}
+
+.search-form__fieldset {
+  border: none;
+  height: 49px;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+
+.search-form__checkbox-list {
+  display: flex;
+  gap: 15px;
+}
+
+.search-form__label {
+  display: flex;
+  align-items: center;
+  width: fit-content;
+  gap: 5px;
+  height: 22px;
+}
+
+.search-form__fieldset input {
+  /*Факультативный шаг. 
+  Когда элемент в фокусе — добавьте границу вокруг с использованием outline. 
+  У этого элемента нужно сбросить обводку в состоянии фокуса и вместо этого 
+  сделать границу у лейбла, который его окружает. Лейбл должен получать границу,
+  только когда поле находится в состоянии :focus-visible, но не :focus.
+  Чтобы это реализовать, можно применить хитрую комбинацию псевдоклассов на классе лейбла — :has(:focus-visible).*/
+  width: 225px;
+  height: 27px;
+  border: 1px solid white;
+  border-left: 0;
+  border-right: 0;
+  font-family: Fira Sans Condensed;
+  font-size: 18px;
+  font-weight: 400;
+  color: #fff;
+  background-color: transparent;
+  appearance: none;
+}
+
+.search-form__textfield::placeholder {
+  color: rgba(255, 255, 255, 0.7);
+}
+
+.search-form__pseudo-checkbox {
+  height: 19px;
+  width: 19px;
+  border: 1px solid white;
+  padding: 1px;
+}
+
+.search-form__pseudo-checkbox::after {
+  content: "";
+  display: block;
+  background-color: #fff;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+}
+
+.search-form__checkbox:checked + .search-form__pseudo-checkbox::after {
+  content: "";
+  opacity: 1;
+}
+
+.search-form__fieldset:hover .search-form__checkbox-list {
+  text-decoration: underline;
 }
