final-version_one

--- a/styles/style.css
+++ b/styles/style.css
@@ -54,6 +54,7 @@ ol {
   display: flex;
   justify-content: center;
   align-items: center;
+  height: 800px;
 }
 
 .content {
@@ -94,13 +95,15 @@ ol {
   display: flex;
   flex-direction: row;
   align-items: flex-start;
+  width: 390px;
+  height: 103px;
 }
 
 .content__video-card-thumbnail {
-  min-width: 194px;
-  height: 103px;
-  object-fit: fill;
-  object-position: top; /* тут сомнения */
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
 }
 
 .content__video-card-description-container {
@@ -117,6 +120,7 @@ ol {
 .content__list {
   display: flex;
   flex-direction: column;
+  align-items: center;
   gap: 30px;
   width: 390px;
 }
@@ -126,11 +130,11 @@ ol {
   flex-direction: column;
   gap: 30px;
   height: 298px;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 .title {
-  font-family: Oswald; /*дописать еще*/
+  font-family: Oswald, sans-serif;
   font-weight: 700;
   font-size: 75px;
   text-transform: uppercase;
@@ -142,9 +146,9 @@ ol {
 }
 
 .search-form__fieldset-title {
-  font-family: "Fira Sans Condensed";
-  font-weight: 400;
+  font-family: "Fira Sans Condensed", sans-serif;
   font-size: 18px;
+  font-weight: 400;
 }
 
 .content__card-link {
@@ -154,7 +158,7 @@ ol {
 
 .content__video-card-title {
   width: 196px;
-  font-family: Oswald;
+  font-family: Oswald, sans-serif;
   font-weight: 700;
   font-size: 30px;
   text-transform: uppercase;
@@ -164,14 +168,15 @@ ol {
 }
 
 .content__video-card-description {
-  font-family: "Fira Sans Condensed";
-  font-weight: 400;
+  font-family: "Fira Sans Condensed", sans-serif;
   font-size: 18px;
-  line-height: 16.2px;
-  text-overflow: ellipsis;
-  white-space: nowrap;
+  font-weight: 400;
+  line-height: 90%;
   overflow: hidden;
-  /* использовать line-clamp */
+  display: -webkit-box;
+  -webkit-line-clamp: 4;
+  line-clamp: 4;
+  -webkit-box-orient: vertical;
 }
 
 .visually-hidden {
@@ -203,37 +208,30 @@ ol {
   gap: 5px;
 }
 
-/*.search-form__fieldset:focus input {
-  outline: none;
-}
-
-.search-form__label:has(:focus-visible) {
-  outline: 1px solid red;  
-  } 
-  
-  input:active {
-  outline: none;
-} 
-  */
-
 .search-form__fieldset input {
-  /*Факультативный шаг. 
-  Когда элемент в фокусе — добавьте границу вокруг с использованием outline. 
-  У этого элемента нужно сбросить обводку в состоянии фокуса и вместо этого 
-  сделать границу у лейбла, который его окружает. Лейбл должен получать границу,
-  только когда поле находится в состоянии :focus-visible, но не :focus.
-  Чтобы это реализовать, можно применить хитрую комбинацию псевдоклассов на классе лейбла — :has(:focus-visible).*/
   width: 225px;
   height: 27px;
   border: 1px solid white;
   border-left: 0;
   border-right: 0;
-  font-family: Fira Sans Condensed;
+  font-family: "Fira Sans Condensed", sans-serif;
   font-size: 18px;
-  font-weight: 400;
   color: #fff;
   background-color: transparent;
   appearance: none;
+}
+
+.search-form__textfield:focus {
+  outline: none;
+}
+
+.search-form__textfield:focus-visible {
+  outline: none;
+}
+
+.search-form__label:has(.search-form__textfield:focus-visible) {
+  outline: 1px solid white;
+  outline-offset: 1px;
 }
 
 .search-form__textfield::placeholder {
@@ -266,13 +264,16 @@ ol {
   cursor: pointer;
 }
 
-/*Факультативный шаг focus */
+.search-form__label:has(.search-form__checkbox:focus-visible) {
+  outline: 1px solid white;
+  outline-offset: 1px;
+}
 
 .button {
   min-height: 34px;
   background-color: transparent;
   border: 1px solid white;
-  font-family: "Fira Sans Condensed";
+  font-family: "Fira Sans Condensed", sans-serif;
   font-size: 18px;
   font-weight: 700;
   color: #fff;
@@ -296,38 +297,45 @@ ol {
   background-color: #545050;
 }
 
-/*.button:focus {
+.button:focus {
   outline: none;
 }
 
 .button:focus-visible {
-  outline: 1px solid red; 
-} */
+  outline: 1px solid white;
+  outline-offset: 1px;
+}
 
 .content__card-link {
   display: block;
+}
+
+.content__card-link:hover {
+  text-decoration: underline;
+  text-decoration-thickness: 1px;
+  text-underline-offset: 1px;
 }
 
 .content__card-link:active {
   background-color: #545050;
 }
 
-.content__card-link:hover {
-  text-decoration: underline;
-  text-decoration-thickness: 1px;
-  text-underline-offset: 3px;
-}
-
 .content__card-link_current {
   background-color: #545050;
 }
 
-/*
-Чтобы состояние :focus-visible работало корректно, 
-придётся сбросить стандартную обводку в состоянии :focus. 
-При событии :focus-visible добавьте обводку с помощью outline.
-Задайте padding слева и справа для .content__list-item в 3px,
- так обводка не прилипнет к границе карточки, если вы будете её реализовывать.*/
+.content__card-link:focus {
+  outline: none;
+}
+
+.content__card-link:focus-visible {
+  outline: 1px solid white;
+  outline-offset: 1px;
+}
+
+.content__list-item {
+  padding: 0 3px;
+}
 
 .result__video-container {
   position: relative;
