--- a/styles/style.css
+++ b/styles/style.css
@@ -8,16 +8,6 @@ html {
   block-size: 100%;
 }
 
-.page {
-  inline-size: 1200px;
-  block-size: 100%;
-  margin: auto;
-  color: #fff;
-  font-family: "Fira Sans Condensed", sans-serif;
-  font-size: 18px;
-  background-color: #1b1919;
-}
-
 h1,
 h2,
 h3,
@@ -54,7 +44,14 @@ ol {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 800px;
+  inline-size: 1200px;
+  /*block-size: 100%;*/
+  margin: auto;
+  color: #fff;
+  font-family: "Fira Sans Condensed", sans-serif;
+  font-size: 18px;
+  background-color: #1b1919;
+  padding: 133px 0;
 }
 
 .content {
@@ -66,26 +63,28 @@ ol {
 
 .result {
   width: 711px;
-  height: 534px;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
 }
 
 .result__video {
+  object-position: center;
   object-fit: cover;
-  width: 711px;
-  height: 386px;
+  width: 100%;
+  height: 100%;
 }
 
 .result__video-container {
   height: 386px;
+  width: 711px;
   margin-bottom: 16px;
+  position: relative;
 }
 
 .content__details {
   display: flex;
-  height: 534px;
+  gap: 24.5px;
   flex-grow: 1;
   flex-direction: column;
   justify-content: space-between;
@@ -114,7 +113,6 @@ ol {
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
-  height: 54px;
 }
 
 .content__list {
@@ -131,6 +129,7 @@ ol {
   gap: 30px;
   height: 298px;
   overflow-y: auto;
+  position: relative;
 }
 
 .title {
@@ -154,6 +153,7 @@ ol {
 .content__card-link {
   text-decoration: none;
   color: #fff;
+  display: block;
 }
 
 .content__video-card-title {
@@ -306,10 +306,6 @@ ol {
   outline-offset: 1px;
 }
 
-.content__card-link {
-  display: block;
-}
-
 .content__card-link:hover {
   text-decoration: underline;
   text-decoration-thickness: 1px;
@@ -335,12 +331,4 @@ ol {
 
 .content__list-item {
   padding: 0 3px;
-}
-
-.result__video-container {
-  position: relative;
-}
-
-.content__list-container {
-  position: relative;
 }
