--- a/styles/style.css
+++ b/styles/style.css
@@ -44,21 +44,24 @@ ol {
   display: flex;
   justify-content: center;
   align-items: center;
+  min-height: 100vh;
+  box-sizing: border-box;
   inline-size: 1200px;
-  /*block-size: 100%;*/
   margin: auto;
   color: #fff;
   font-family: "Fira Sans Condensed", sans-serif;
   font-size: 18px;
   background-color: #1b1919;
-  padding: 133px 0;
 }
 
 .content {
-  width: 1140px;
+  max-width: 1140px;
+  width: 100%;
   display: flex;
   align-items: flex-end;
   gap: 30px;
+  justify-content: center;
+  padding: 133px 0;
 }
 
 .result {
